--- a/dev/css_dev/layout/_container.scss
+++ b/dev/css_dev/layout/_container.scss
@@ -170,7 +170,7 @@
     .podcast_tit {
       position: absolute;
       top: 48px;
-      left: 6.25%;
+      right: 6.25%;
       color: $color_5;
       background-color: $prime_color;
       border-left: 16px solid $sub_color;
