--- a/assets/css/display.css
+++ b/assets/css/display.css
@@ -525,7 +525,7 @@ ul.socials_list.dark_mode li .dark_mode_item { display: block; }
 
 .podcast_top .podcast_tit_wrap { background: url(../../assets/images/temp/podcasts_banner_1.png) no-repeat right bottom; width: 100%; height: 564px; position: relative; }
 
-.podcast_top .podcast_tit_wrap .podcast_tit { position: absolute; top: 48px; left: 6.25%; color: #F4F2FF; background-color: #503AE7; border-left: 16px solid #1AD993; padding: 7.5% 8.5% 7.5% 5%; width: 60%; }
+.podcast_top .podcast_tit_wrap .podcast_tit { position: absolute; top: 48px; right: 6.25%; color: #F4F2FF; background-color: #503AE7; border-left: 16px solid #1AD993; padding: 7.5% 8.5% 7.5% 5%; width: 60%; }
 
 .podcast_top .podcast_tit_wrap .podcast_tit h2 { letter-spacing: 3px; }
 
@@ -1086,7 +1086,9 @@ header .gnb .quick_top a.btn_top:after { content: ''; height: 0; width: 0; posit
 
 .notify-wrap .notify-wrap-inner .notify-scroll { display: inline-block; animation: text-scroll 20s linear infinite; }
 
-.notify-wrap .notify-wrap-inner .notify-scroll ul li { display: inline-block; padding-right: 350px; vertical-align: text-bottom; }
+.notify-wrap .notify-wrap-inner .notify-scroll:hover { animation-play-state: paused; }
+
+.notify-wrap .notify-wrap-inner .notify-scroll ul li { display: inline-block; padding-right: 150px; vertical-align: text-bottom; }
 
 .notify-wrap .notify-wrap-inner .notify-scroll ul li a { display: block; }
 
@@ -1129,13 +1131,19 @@ header .gnb .quick_top a.btn_top:after { content: ''; height: 0; width: 0; posit
 
 .page_home .swiper-sec .swiper-button-next::after, .page_home .swiper-sec .swiper-button-prev::after { content: ''; }
 
-.page_home .swiper-sec .swiper-button-prev { left: 88%; background: #503AE7 url(../../assets/images/temp/ico_prev.png) no-repeat center; }
+.page_home .swiper-sec .swiper-button-prev { left: unset; right: 58px; background: #503AE7 url(../../assets/images/temp/ico_prev.png) no-repeat center; transition: 0.3s; }
 
-.page_home .swiper-sec .swiper-button-next { right: 0%; background: #503AE7 url(../../assets/images/temp/ico_next_01.png) no-repeat center; }
+.page_home .swiper-sec .swiper-button-prev:hover { background: #3E2DB2 url(../../assets/images/temp/ico_prev.png) no-repeat center; }
+
+.page_home .swiper-sec .swiper-button-next { right: 0; background: #503AE7 url(../../assets/images/temp/ico_next_01.png) no-repeat center; transition: 0.3s; }
+
+.page_home .swiper-sec .swiper-button-next:hover { background: #3E2DB2 url(../../assets/images/temp/ico_next_01.png) no-repeat center; }
 
 .page_home .custom_swiper .custom_wrap { overflow: visible; }
 
-.page_home .custom_swiper .custom_wrap .item::after { content: ''; display: block; width: 100%; height: 12px; margin-top: 12px; background: #503AE7; }
+.page_home .custom_swiper .custom_wrap li { height: auto; }
+
+.page_home .custom_swiper .custom_wrap .item { display: flex; flex-direction: column; justify-content: flex-start; height: 100%; }
 
 .page_home .custom_swiper .custom_wrap .my_review { display: flex; align-items: center; margin-bottom: 16px; }
 
@@ -1143,7 +1151,9 @@ header .gnb .quick_top a.btn_top:after { content: ''; height: 0; width: 0; posit
 
 .page_home .custom_swiper .custom_wrap .my_review > p { width: 116px; height: 44px; margin-left: 15px; text-indent: 3px; font-weight: 500; background: url(../../assets/images/ico/stars.png) no-repeat center bottom; }
 
-.page_home .custom_swiper .custom_wrap .review_con { height: auto; min-height: 192px; line-height: 24px; }
+.page_home .custom_swiper .custom_wrap .review_con { height: auto; line-height: 24px; margin-bottom: auto; }
+
+.page_home .custom_swiper .custom_wrap .review_bar { display: block; width: 100%; height: 12px; margin-top: 12px; background: #503AE7; }
 
 /* tablet 지정 */
 @media only screen and (max-width: 768px) { .home_wrap .main_top { padding: 0 20px; background-size: 37%; background-position: 85% center; }
@@ -1165,8 +1175,10 @@ header .gnb .quick_top a.btn_top:after { content: ''; height: 0; width: 0; posit
   .page_home .typ_01_img .img_only { left: 50%; top: 50%; transform: translate(-50%, -50%); margin: 30px 0px 0; }
   .page_home .custom_swiper { margin: 30px 0px 0; padding: 0 16px; }
   .page_home .swiper-sec { margin-bottom: 64px; }
-  .page_home .swiper-sec .swiper_btn_wrap { position: absolute; position: absolute; right: 66px; bottom: -10px; }
-  .page_home .swiper-sec .swiper-button-next, .page_home .swiper-sec .swiper-button-prev { width: 32px; height: 32px; background-size: 50%; } }
+  .page_home .swiper-sec .swiper_btn_wrap { position: absolute; right: 0; bottom: -10px; }
+  .page_home .swiper-sec .swiper-button-next, .page_home .swiper-sec .swiper-button-prev { width: 32px; height: 32px; background-size: 50%; }
+  .page_home .swiper-sec .swiper-button-next:hover, .page_home .swiper-sec .swiper-button-prev:hover { background-size: 50%; }
+  .page_home .swiper-sec .swiper-button-prev { right: 42px; } }
 
 /* // tablet 지정 */
 /* mobile 지정 */
@@ -1230,7 +1242,7 @@ header .gnb .quick_top a.btn_top:after { content: ''; height: 0; width: 0; posit
 
 .list_type .typ_list_wrap ul li .typ_sub_wrap p, .list_type .typ_list_wrap ul li .typ_sub_wrap a.btn_listen { margin-top: 10px; }
 
-.list_type .typ_list_wrap ul li .typ_sub_wrap .sub_txt { line-height: 24px; }
+.list_type .typ_list_wrap ul li .typ_sub_wrap .sub_txt { line-height: 24px; text-overflow: ellipsis; overflow: hidden; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; }
 
 .list_type .typ_list_wrap ul li:last-child { margin-right: 0; }
 
