--- a/dev/css_dev/pages/_main.scss
+++ b/dev/css_dev/pages/_main.scss
@@ -14,7 +14,7 @@
     .main_tit{
       width: 480px;
       margin-top: 92px;
-      p{
+      p, form{
         margin-top: 32px;
         color: var(--fontColor);
         &:first-child{
